test/implicitDup13_8.slq

def foo(){
	x:=0:ğ”¹;
	if true{
		y:=dup(x);
	}else{
		y:=dup(x);
	}
	x:=3; /// error
}
def main()â‡’foo;
